samples/_failures_safe/1761646009_92ddc6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5843d30f.c: In function ‘print_statistics’:
./samples/SAFE/__tmp_5843d30f.c:140:5: error: expected expression at end of input
  140 |     if (!analyzer)
      |     ^~
./samples/SAFE/__tmp_5843d30f.c:140:5: error: expected declaration or statement at end of input
